Uploading image implemented
- See, http://docs.phonegap.com/en/1.7.0/cordova_file_file.md.html#FileTransfer
- 'Upload' button is enabled only when a picture is selected.
- TODO: Provide feedback to the user when image uploads successfully
- TODO: Provide feedback to user when image fails to upload
- We are using handy http://requestb.in/ to check and analyze requests made.
- Added '*.requestb.in' in URL whiltelist.

--- a/Spottr/Cordova.plist
+++ b/Spottr/Cordova.plist
@@ -23,6 +23,7 @@
 	<key>ExternalHosts</key>
 	<array>
 		<string>*.placehold.it</string>
+		<string>*.requestb.in</string>
 	</array>
 	<key>Plugins</key>
 	<dict>
